first version that accepts simple draw commands from stdin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3)
-project(WhiteboardDemo)
+project(whiteboard)
 
 set(CMAKE_VERBOSE_MAKEFILE true)
 
@@ -10,26 +10,22 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build the GLFW example programs")
 add_subdirectory(deps/glfw)
 
-include_directories(
-        deps/glfw/include
-        deps/nanovg/src
-)
-
 set(SOURCE_FILES
         main.cpp
 )
+
 add_executable(WhiteboardDemo ${SOURCE_FILES})
 
-add_library(nanovg deps/nanovg/src/nanovg.c)
+add_library(whiteboard deps/nanovg/src/nanovg.c)
+target_include_directories(whiteboard PUBLIC
+        deps/glfw/include
+        deps/nanovg/src
+)
 
 if(APPLE)
      set(CMAKE_CXX_LINK_FLAGS "-framework Cocoa -framework QuartzCore -framework OpenGL")
 endif(APPLE)
 
-set(WHITEBOARD_LIBRARIES
-        nanovg
-        glfw
-        ${GLFW_LIBRARIES}
-)
+target_link_libraries(whiteboard glfw ${GLFW_LIBRARIES})
 
-target_link_libraries(WhiteboardDemo ${WHITEBOARD_LIBRARIES})
+target_link_libraries(WhiteboardDemo whiteboard)
