draw streams and renderer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,11 @@ add_subdirectory(deps/glfw)
 
 set(SOURCE_FILES
         main.cpp
+        deps/nanovg/src/nanovg.c
 )
 
-add_executable(WhiteboardDemo ${SOURCE_FILES})
+add_executable(whiteboard ${SOURCE_FILES})
 
-add_library(whiteboard deps/nanovg/src/nanovg.c)
 target_include_directories(whiteboard PUBLIC
         deps/glfw/include
         deps/nanovg/src
@@ -27,5 +27,3 @@ if(APPLE)
 endif(APPLE)
 
 target_link_libraries(whiteboard glfw ${GLFW_LIBRARIES})
-
-target_link_libraries(WhiteboardDemo whiteboard)
